--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
-  "version": "0.0.0",
+  "version": "14.15.4",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+    "dev": "nodemon server.js"
   },
   "devDependencies": {},
   "dependencies": {
