--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "dependencies": {
     "@types/dat.gui": "^0.7.6",
     "dat.gui": "^0.7.7",
-    "express": "^4.17.1",
-    "three": "^0.130.0"
+    "express": "^4.17.1"
   }
 }
